# dirsync

./: Cargo.toml  README.md
.github/workflows/: release.yml
docs/: development-plan.md
src/: apply.rs  chunker.rs  cli.rs  event.rs  lib.rs  main.rs  shm.rs  sync.rs  watcher.rs
tests/: integration.rs
